base.core/src/main/java/eapli/base/surveymanagement/application/grammar/ANTLR/SurveyGrammarParser.java
// Generated from C:/Users/Rita Lello/Documents/lei21_22_s4_2de_02/base.core/src/main/java/eapli/base/surveymanagement/application/grammar\SurveyGrammar.g4 by ANTLR 4.10.1
package eapli.base.surveymanagement.application.grammar.ANTLR;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SurveyGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NEWLINE=1, NUMBER=2, LETTER=3, SPACE=4, END=5, MANDATORY=6, OPTIONAL=7, 
		CONDITION_DEPENDENT=8, FREE_TEXT=9, NUMERIC=10, SINGLE_CHOICE1=11, SINGLE_CHOICE2=12, 
		MULTIPLE_CHOICE1=13, MULTIPLE_CHOICE2=14, SORTING_OPTIONS=15, SCALLING_OPTIONS=16, 
		CHOICEMARK=17;
	public static final int
		RULE_prog = 0, RULE_survey = 1, RULE_surveyID = 2, RULE_alphanumeric = 3, 
		RULE_title = 4, RULE_welcomeMessage = 5, RULE_sentence = 6, RULE_sectionList = 7, 
		RULE_finalMessage = 8, RULE_section = 9, RULE_sectionID = 10, RULE_shortDescription = 11, 
		RULE_obligatoriness = 12, RULE_condition = 13, RULE_content = 14, RULE_question = 15, 
		RULE_questionID = 16, RULE_questionSentence = 17, RULE_type = 18, RULE_choices = 19, 
		RULE_choice = 20, RULE_choiceID = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "survey", "surveyID", "alphanumeric", "title", "welcomeMessage", 
			"sentence", "sectionList", "finalMessage", "section", "sectionID", "shortDescription", 
			"obligatoriness", "condition", "content", "question", "questionID", "questionSentence", 
			"type", "choices", "choice", "choiceID"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "' '", null, "'mandatory'", "'optional'", "'condition dependent'", 
			"'free-text'", "'numeric'", "'single-choice'", "'single-choice with input value'", 
			"'multiple-choice'", "'multiple-choice with input value'", "'sorting options'", 
			"'scalling options'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NEWLINE", "NUMBER", "LETTER", "SPACE", "END", "MANDATORY", "OPTIONAL", 
			"CONDITION_DEPENDENT", "FREE_TEXT", "NUMERIC", "SINGLE_CHOICE1", "SINGLE_CHOICE2", 
			"MULTIPLE_CHOICE1", "MULTIPLE_CHOICE2", "SORTING_OPTIONS", "SCALLING_OPTIONS", 
			"CHOICEMARK"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SurveyGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SurveyGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public SurveyContext survey() {
			return getRuleContext(SurveyContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyGrammarVisitor ) return ((SurveyGrammarVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			survey();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
			throw new RuntimeException();
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SurveyContext extends ParserRuleContext {
		public SurveyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_survey; }
	 
		public SurveyContext() { }
		public void copyFrom(SurveyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class QuestionarioContext extends SurveyContext {
		public SurveyIDContext surveyID() {
			return getRuleContext(SurveyIDContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(SurveyGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(SurveyGrammarParser.NEWLINE, i);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public WelcomeMessageContext welcomeMessage() {
			return getRuleContext(WelcomeMessageContext.class,0);
		}
		public SectionListContext sectionList() {
			return getRuleContext(SectionListContext.class,0);
		}
		public FinalMessageContext finalMessage() {
			return getRuleContext(FinalMessageContext.class,0);
		}
		public QuestionarioContext(SurveyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).enterQuestionario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).exitQuestionario(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyGrammarVisitor ) return ((SurveyGrammarVisitor<? extends T>)visitor).visitQuestionario(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SurveyContext survey() throws RecognitionException {
		SurveyContext _localctx = new SurveyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_survey);
		try {
			_localctx = new QuestionarioContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			surveyID();
			setState(47);
			match(NEWLINE);
			setState(48);
			title();
			setState(49);
			match(NEWLINE);
			setState(50);
			welcomeMessage();
			setState(51);
			sectionList();
			setState(52);
			finalMessage();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
			throw new RuntimeException();
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SurveyIDContext extends ParserRuleContext {
		public AlphanumericContext alphanumeric() {
			return getRuleContext(AlphanumericContext.class,0);
		}
		public SurveyIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_surveyID; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).enterSurveyID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).exitSurveyID(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyGrammarVisitor ) return ((SurveyGrammarVisitor<? extends T>)visitor).visitSurveyID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SurveyIDContext surveyID() throws RecognitionException {
		SurveyIDContext _localctx = new SurveyIDContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_surveyID);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			alphanumeric();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
			throw new RuntimeException();
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlphanumericContext extends ParserRuleContext {
		public TerminalNode LETTER() { return getToken(SurveyGrammarParser.LETTER, 0); }
		public AlphanumericContext alphanumeric() {
			return getRuleContext(AlphanumericContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(SurveyGrammarParser.NUMBER, 0); }
		public AlphanumericContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alphanumeric; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).enterAlphanumeric(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).exitAlphanumeric(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyGrammarVisitor ) return ((SurveyGrammarVisitor<? extends T>)visitor).visitAlphanumeric(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlphanumericContext alphanumeric() throws RecognitionException {
		AlphanumericContext _localctx = new AlphanumericContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_alphanumeric);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				match(LETTER);
				setState(57);
				alphanumeric();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				match(NUMBER);
				setState(59);
				alphanumeric();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				match(LETTER);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(61);
				match(NUMBER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
			throw new RuntimeException();
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleContext extends ParserRuleContext {
		public SentenceContext sentence() {
			return getRuleContext(SentenceContext.class,0);
		}
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).exitTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyGrammarVisitor ) return ((SurveyGrammarVisitor<? extends T>)visitor).visitTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			sentence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
			throw new RuntimeException();
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WelcomeMessageContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(SurveyGrammarParser.NEWLINE, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public WelcomeMessageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_welcomeMessage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).enterWelcomeMessage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).exitWelcomeMessage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyGrammarVisitor ) return ((SurveyGrammarVisitor<? extends T>)visitor).visitWelcomeMessage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WelcomeMessageContext welcomeMessage() throws RecognitionException {
		WelcomeMessageContext _localctx = new WelcomeMessageContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_welcomeMessage);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << LETTER) | (1L << END))) != 0)) {
				{
				{
				setState(66);
				sentence();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
			throw new RuntimeException();
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public SentenceContext sentence() {
			return getRuleContext(SentenceContext.class,0);
		}
		public List<TerminalNode> LETTER() { return getTokens(SurveyGrammarParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(SurveyGrammarParser.LETTER, i);
		}
		public TerminalNode SPACE() { return getToken(SurveyGrammarParser.SPACE, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(SurveyGrammarParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(SurveyGrammarParser.NUMBER, i);
		}
		public List<TerminalNode> END() { return getTokens(SurveyGrammarParser.END); }
		public TerminalNode END(int i) {
			return getToken(SurveyGrammarParser.END, i);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyGrammarVisitor ) return ((SurveyGrammarVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sentence);
		int _la;
		try {
			int _alt;
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(74);
						match(LETTER);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(77); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(79);
					match(SPACE);
					}
				}

				setState(82);
				sentence();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(83);
						match(NUMBER);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(86); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(88);
					match(SPACE);
					}
				}

				setState(91);
				sentence();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(93); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(92);
						match(END);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(95); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(97);
					match(SPACE);
					}
				}

				setState(100);
				sentence();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(102); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(101);
						match(END);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(104); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
			throw new RuntimeException();
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionListContext extends ParserRuleContext {
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public SectionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).enterSectionList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).exitSectionList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyGrammarVisitor ) return ((SurveyGrammarVisitor<? extends T>)visitor).visitSectionList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionListContext sectionList() throws RecognitionException {
		SectionListContext _localctx = new SectionListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sectionList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(109); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(108);
					section();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(111); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
			throw new RuntimeException();
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FinalMessageContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(SurveyGrammarParser.NEWLINE, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public FinalMessageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_finalMessage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).enterFinalMessage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).exitFinalMessage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyGrammarVisitor ) return ((SurveyGrammarVisitor<? extends T>)visitor).visitFinalMessage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FinalMessageContext finalMessage() throws RecognitionException {
		FinalMessageContext _localctx = new FinalMessageContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_finalMessage);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << LETTER) | (1L << END))) != 0)) {
				{
				{
				setState(113);
				sentence();
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
			throw new RuntimeException();
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
	 
		public SectionContext() { }
		public void copyFrom(SectionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SeccaoContext extends SectionContext {
		public SectionIDContext sectionID() {
			return getRuleContext(SectionIDContext.class,0);
		}
		public TerminalNode SPACE() { return getToken(SurveyGrammarParser.SPACE, 0); }
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(SurveyGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(SurveyGrammarParser.NEWLINE, i);
		}
		public ShortDescriptionContext shortDescription() {
			return getRuleContext(ShortDescriptionContext.class,0);
		}
		public ObligatorinessContext obligatoriness() {
			return getRuleContext(ObligatorinessContext.class,0);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode END() { return getToken(SurveyGrammarParser.END, 0); }
		public SeccaoContext(SectionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).enterSeccao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).exitSeccao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyGrammarVisitor ) return ((SurveyGrammarVisitor<? extends T>)visitor).visitSeccao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_section);
		int _la;
		try {
			_localctx = new SeccaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			sectionID();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==END) {
				{
				setState(122);
				match(END);
				}
			}

			setState(125);
			match(SPACE);
			setState(126);
			title();
			setState(127);
			match(NEWLINE);
			setState(128);
			shortDescription();
			setState(129);
			obligatoriness();
			setState(130);
			match(NEWLINE);
			setState(131);
			content();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
			throw new RuntimeException();
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionIDContext extends ParserRuleContext {
		public List<TerminalNode> NUMBER() { return getTokens(SurveyGrammarParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(SurveyGrammarParser.NUMBER, i);
		}
		public SectionIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionID; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).enterSectionID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).exitSectionID(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyGrammarVisitor ) return ((SurveyGrammarVisitor<? extends T>)visitor).visitSectionID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionIDContext sectionID() throws RecognitionException {
		SectionIDContext _localctx = new SectionIDContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sectionID);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(133);
				match(NUMBER);
				}
				}
				setState(136); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
			throw new RuntimeException();
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShortDescriptionContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(SurveyGrammarParser.NEWLINE, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public ShortDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shortDescription; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).enterShortDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SurveyGrammarListener ) ((SurveyGrammarListener)listener).exitShortDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SurveyGrammarVisitor ) return ((SurveyGrammarVisitor<? extends T>)visitor).visitShortDescription(this);
			else return visitor.visitChildren(this);
		}
	}
